Fix voting and portrets

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -112,8 +112,8 @@
                 <div id="portrets" class="game-bar-top-item">
 
                     <div class="left-container">
-                        <img src="images/character_1.PNG" class="other-portret" />
-                        <img src="images/character_2.PNG" class="other-portret" />
+                        <img src="images/character_1.PNG" class="other-portret" id="other-portret1" />
+                        <img src="images/character_2.PNG" class="other-portret" id="other-portret2" />
                     </div>
 
                     <div class="right-container">
@@ -193,14 +193,14 @@
 
                             <div class="action-list-section">
                                 <label>
-                                    <button id="west" data-val="1" title="Left">
-                                        <img src="images/action_move_left.PNG" data-val="1" />
+                                    <button id="west" data-val="2" title="Left">
+                                        <img src="images/action_move_left.PNG" data-val="2" />
                                     </button>
                                 </label>
 
                                 <label>
-                                    <button id="east" data-val="2" title="Right">
-                                        <img src="images/action_move_right.PNG" data-val="2" />
+                                    <button id="east" data-val="1" title="Right">
+                                        <img src="images/action_move_right.PNG" data-val="1" />
                                     </button>
                                 </label>
 
