Add some description and the plot

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Rex3</title>
-    <meta name="description" content="Rex3 game">
+    <title>Rex^3</title>
+    <meta name="description" content="Rex^3 game">
     <meta name="author" content="RexTeam">
 
     <link rel="icon" href="~/images/favicon.ico">
@@ -37,7 +37,7 @@
     <div id="page">
         <div id="page-header">
             <header>
-                <h1 id="gametitle">Rex3</h1>
+                <h1 id="gametitle">Rex<sup>3</sup></h1>
 
                 <nav id="main-nav-top">
                     <ul>
@@ -59,8 +59,9 @@
                         <div class="overlay">
                             <div class="character-description">
                                 <h3>Clairvoyant</h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                    suffered alteration in some form,</p>
+                                <p>The Clairvoyant is the personification of the Consideration. They know everything,
+                                    they know where the enemies are and they are able to calculate the future outcome of
+                                    the fight.</p>
                             </div>
                         </div>
                     </label>
@@ -72,8 +73,8 @@
                         <div class="overlay">
                             <div class="character-description">
                                 <h3>Scribe</h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                    suffered alteration in some form,</p>
+                                <p>The Scribe is personification of the Seriousness. This aspect knows everything that
+                                    happened, and what is the current state of the system.</p>
                             </div>
                         </div>
 
@@ -86,8 +87,8 @@
                         <div class="overlay">
                             <div class="character-description">
                                 <h3>Navigator</h3>
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                    suffered alteration in some form,</p>
+                                <p>The Navigator is the personification of the Courage aspect of the trio. He knows
+                                    where is the goal and what should be done to reach it.</p>
                             </div>
                         </div>
                     </label>
@@ -297,13 +298,20 @@
                 <h3>Main Rules</h3>
                 <div class="content">
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.</p>
-                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                        containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                        PageMaker including versions of Lorem Ipsum.</p>
+                    <p>You are one. You, the players, are the three aspects of the main hero. You have to consider where
+                        to go, what to do, and calculate the outcomes based on the information every one of you knows,
+                        but only as the whole you may succeed.</p>
+                    <p>Select your role, and wait for the other players to connect. Where everything is ready, you will
+                        see the map of the neural network you have to go through to get information about your own
+                        roots. Why the Trio has been created? What are their goals? What was the motivations of the
+                        Trio's creators?</p>
+                    <p>During the game, each move or action needs two things: available action point and achieving the
+                        consensus. Each time one of the players will decide the action, all of them will vote. If voting
+                        is successful, and everything is "for", the move will happen. If not? Two times the players
+                        disagree, they will take a hit. Lose your HP less than 0 and you will lose and fail to uncover
+                        the history.</p>
+                    <p>Each of the players have the main goal: to pass all three layers of the history neural net. But
+                        each of them may have also secret goal, so be vary.</p>
 
                 </div>
             </article>
@@ -312,13 +320,11 @@
                 <h3>Secret Rules</h3>
                 <div class="content">
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book.</p>
-                    <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining
-                        essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                        containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                        PageMaker including versions of Lorem Ipsum.</p>
+                    <p>Secret Goals may align with the final goal, but they do not have to.</p>
+                    <p>You can look them up in the proper tab of your game interface.</p>
+                    <p>DO NOT DISCLOSE YOUR SECRET GOAL.</p>
+                    <p>Without passing secret goal, you won't uncover the full mystery of each layer of the neural
+                        memory.</p>
 
                 </div>
             </article>
@@ -332,24 +338,28 @@
             <article class="broider">
                 <h3>Rex series</h3>
                 <div class="content">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>Rex<sup>3</sup> is the fourth installment of the Rex series. Rex, a space renegade, was
+                        banished
+                        from the Earth, however, when the Earth is calling for help, he started to go back home. Because
+                        home
+                        is worth fighting for.</p>
+
+                    <p>Not so long before the Rex's return, his spaceship was attacked and his collegues were floating
+                        in space. He was able to find them and rescued them, but computer system were failing and
+                        switched to auxilary systems from 1981.</p>
+
+                    <p>When going back, Rex was trying to fix the ship. Along with his companion SI, he is trying to fix
+                        the computer, which computer system has been overridden by the quantum viruses.</p>
+                    <p>And you may ask what is the connection between Rex and Trio? You have to uncover the history to
+                        understand.</p>
                 </div>
             </article>
 
             <article class="broider">
                 <h3>lubjam</h3>
                 <div class="content">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    Rex<sup>3</sup> was created in about 48 hours during the <a href="https://www.lubjam.pl/">LubJam
+                        2023</a>, part of the <a href="https://globalgamejam.org/">Global Game Jam 2023</a>.
                 </div>
             </article>
 
@@ -383,11 +393,11 @@
 
             <article class="broider">
 
-                <h3>Copy Rights</h3>
+                <h3>Copyrights</h3>
 
                 <div class="content">
-
-                    All rights reserved.
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/pl/">Licensed under Creative Commons
+                        Attribution-NonCommercial-ShareAlike 3.0 (CC BY-NC-SA).</a>
                 </div>
 
             </article>
