--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -24,7 +24,7 @@
 
     <canvas id="canvas"></canvas>
 
-    <div id="debug" class="col-6">
+    <div id="debug">
         <button>gamestarted</button>
         <button>win</button>
         <button>lose</button>
@@ -32,6 +32,14 @@
         <button>hit</button>
 
         <div id="debug-log"></div>
+
+        <audio id="audio-intro" src="~/audio/intro.mp3" preload="auto"></audio>
+        <audio id="audio-final" src="~/audio/final.mp3" preload="auto"></audio>
+        <audio id="audio-level0" src="~/audio/level0.mp3" preload="auto"></audio>
+        <audio id="audio-level1" src="~/audio/level1.mp3" preload="auto" loop="true"></audio>
+        <audio id="sfx-voteend" src="~/audio/sfx_voteend.mp3" preload="auto"></audio>
+        <audio id="sfx-voteendfail" src="~/audio/sfx_voteendfail.mp3" preload="auto"></audio>
+        <audio id="sfx-votestart" src="~/audio/sfx_votestart.mp3" preload="auto"></audio>
     </div>
 
     <div id="page">
