Fix special actions

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -215,7 +215,7 @@
 
                                 <label>
                                     <button id="special" data-val="special" title="Special Action">
-                                        <img src="images/action_special.png" data-val="0" />
+                                        <img id="special-img" src="images/action_special.png" />
                                     </button>
                                 </label>
                             </div>
