--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -289,14 +289,14 @@
         </div>
 
 
-        <div id="win">
+        <section id="win" class="section-description">
             <h1>You win!</h1>
-            <h2></h2>
-        </div>
+            <p></p>
+        </section>
 
-        <div id="lose">
+        <div id="lose" class="section-description">
             <h1>You lose!</h1>
-            <h2></h2>
+            <p></p>
         </div>
 
         <section id="rules" class="section-description">
@@ -384,7 +384,7 @@
                         </li>
                         <li>
                             <p class="name">
-                                <a href="#">Marylka</a> music + sfx
+                                <a href="#">maryla_ambasador</a> music + sfx
                             </p>
                         </li>
                         <li>
