Fix last things before release

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -24,23 +24,23 @@
 
     <canvas id="canvas"></canvas>
 
-    <div id="debug">
-        <button>gamestarted</button>
-        <button>win</button>
-        <button>lose</button>
-        <button>next</button>
-        <button>hit</button>
+    @* <div id="debug">
+    <button>gamestarted</button>
+    <button>win</button>
+    <button>lose</button>
+    <button>next</button>
+    <button>hit</button>
 
-        <div id="debug-log"></div>
+    <div id="debug-log"></div>
+    </div> *@
 
-        <audio id="audio-intro" src="~/audio/intro.mp3" preload="auto"></audio>
-        <audio id="audio-final" src="~/audio/final.mp3" preload="auto"></audio>
-        <audio id="audio-level0" src="~/audio/level0.mp3" preload="auto"></audio>
-        <audio id="audio-level1" src="~/audio/level1.mp3" preload="auto" loop="true"></audio>
-        <audio id="sfx-voteend" src="~/audio/sfx_voteend.mp3" preload="auto"></audio>
-        <audio id="sfx-voteendfail" src="~/audio/sfx_voteendfail.mp3" preload="auto"></audio>
-        <audio id="sfx-votestart" src="~/audio/sfx_votestart.mp3" preload="auto"></audio>
-    </div>
+    <audio id="audio-intro" src="~/audio/intro.mp3" preload="auto"></audio>
+    <audio id="audio-final" src="~/audio/final.mp3" preload="auto"></audio>
+    <audio id="audio-level0" src="~/audio/level0.mp3" preload="auto"></audio>
+    <audio id="audio-level1" src="~/audio/level1.mp3" preload="auto" loop="true"></audio>
+    <audio id="sfx-voteend" src="~/audio/sfx_voteend.mp3" preload="auto"></audio>
+    <audio id="sfx-voteendfail" src="~/audio/sfx_voteendfail.mp3" preload="auto"></audio>
+    <audio id="sfx-votestart" src="~/audio/sfx_votestart.mp3" preload="auto"></audio>
 
     <div id="page">
         <div id="page-header">
@@ -166,8 +166,8 @@
                         <form id="action-voting">
                             <div id="voting">
                                 <p id="action"></p>
-                                <button data-val="1">Yes</button>
-                                <button data-val="0">No</button>
+                                <button data-val="1">1</button>
+                                <button data-val="0">0</button>
                             </div>
 
                             <label>
